// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FollowSerializers : Approve : should return connection with info 1`] = `
{
  "data": {
    "attributes": {
      "approvedAt": 1,
      "followerId": 1,
      "followingId": 2,
    },
    "id": 21,
    "type": "Follow",
  },
  "links": {
    "self": {},
  },
}
`;

exports[`FollowSerializers : Follow : should return connection with info 1`] = `
{
  "data": {
    "attributes": {
      "approvedAt": 0,
      "followerId": 1,
      "followingId": 2,
    },
    "id": 21,
    "type": "Follow",
  },
  "links": {
    "self": {},
  },
}
`;

exports[`FollowSerializers : Unfollow : should return connection with info 1`] = `
{
  "data": {
    "attributes": {
      "approvedAt": 0,
      "followerId": 1,
      "followingId": 2,
    },
    "id": 21,
    "type": "Follow",
  },
  "links": {
    "self": {},
  },
}
`;
